--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 Degree is in Specialist Technician in Multimedia Development, and I am based in Tangier,
                                 Morocco. I have passion for programming , problem
                                 solving and everything related to modern technologies ..</p>
-                            <a href="#" class="btn "> Download CV </a>
+                            <!-- <a href="#" class="btn "> Download CV </a> -->
                         </div>
                         <div class="home-img padd-15">
                             <img src="image/22.jfif" alt="">
